# BibleOS

./: LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-db.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: bible.rs  lib.rs  main.rs
src/components/: ai-chat.tsx  book-selector.tsx  chat-body.tsx  discover.tsx  header.tsx  reader.tsx  theme-toggle.tsx
src/components/ui/: command.tsx
src/hooks/: api-key.ts
src/lib/: ai.ts  bible.ts  db.ts  discover.ts  types.ts
src/stores/: chat.ts  reader.ts
