[package]
name = "bible-os"
version = "0.1.0"
description = "A lightweight Bible reader with integrated AI chat"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bible_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[profile.release]
panic = "abort"   # strip panic clean-up logic
codegen-units = 1 # compile one crate at a time for better inlini/ptimization
lto = true        # link-time optimization across crates
opt-level = "s"   # optimize for binary size
strip = true      # strip debug symbols from the binary
